# enterprise-agentic-rag

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  verify_prerequisites.py
.github/workflows/: ci.yml
atlasrag/: README.md  __init__.py
atlasrag/eval/: README.md  golden_dataset.jsonl
atlasrag/scripts/: evaluate.py  health_check.py  ingest_documents.py
atlasrag/src/: __init__.py
atlasrag/src/agents/: README.md  __init__.py  answerer.py  graph.py  planner.py  retriever.py  state.py  verifier.py
atlasrag/src/api/: README.md  __init__.py  dependencies.py  main.py  middleware.py  models.py
atlasrag/src/api/routes/: __init__.py  health.py  ingest.py  query.py  status.py
atlasrag/src/config/: README.md  __init__.py  api_config.py  llm_config.py  observability_config.py  settings.py  vector_store_config.py
atlasrag/src/evaluation/: README.md  __init__.py  baseline.py  gates.py  metrics.py  models.py  runner.py
atlasrag/src/ingestion/: README.md  __init__.py  chunkers.py  cleaners.py  exceptions.py  loaders.py  models.py  pipeline.py
atlasrag/src/llm/: README.md  __init__.py  base.py  exceptions.py  factory.py  gemini_provider.py  models.py  ollama_provider.py  openai_provider.py
atlasrag/src/observability/: __init__.py  logging.py  metrics.py  tracing.py
atlasrag/src/rag/: __init__.py  exceptions.py  models.py  pipeline.py  prompts.py
atlasrag/src/retrieval/: README.md  __init__.py  base.py  chroma_store.py  exceptions.py  factory.py  milvus_store.py  models.py
atlasrag/tests/: __init__.py  conftest.py
atlasrag/tests/unit/: test_agents.py  test_api.py  test_config.py  test_evaluation.py  test_gates.py  test_ingestion.py  test_llm.py  test_observability.py  test_rag.py  test_retrieval.py
data/samples/: engineering-onboarding.txt  hr-handbook.txt  security-policy.txt
infra/docker/: Dockerfile
infra/docker/grafana/: dashboards.yml
infra/docker/postgres/: init.sql
infra/docker/prometheus/: prometheus.yml
infra/k8s/: api-deployment.yml  api-hpa.yml  api-service.yml  configmap.yml  ingress.yml  namespace.yml  secret.yml  servicemonitor.yml
